Theme > UV Image editor > Scope Background does not have any effect #46180

Closed
opened 2015-09-20 13:49:35 +02:00 by david mcsween · 4 comments

b2.75 # b9bccd5 Gooseberry.
MBP OSX 10.10.5 Intel Iris pro

When changing User Prefs > Theme > UV Image editor > Scope Region Background Color, there is no effect on the scopes in that window.

The default color does not provide enough contrast with the graticule, making the display difficult to read. So it is important to be able to change the scopes background.

Confirmed on other system but no details of that system available.

b2.75 # b9bccd5 Gooseberry. MBP OSX 10.10.5 Intel Iris pro When changing User Prefs > Theme > UV Image editor > Scope Region Background Color, there is no effect on the scopes in that window. The default color does not provide enough contrast with the graticule, making the display difficult to read. So it is important to be able to change the scopes background. Confirmed on other system but no details of that system available.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @davidmcsween

Added subscriber: @davidmcsween
Bastien Montagne changed title from Theme colour > UV Image editor does not take effect to Theme > UV Image editor > Scope Background does not have any effect 2015-09-20 14:28:34 +02:00

This issue was referenced by cbeb76da95

This issue was referenced by cbeb76da952cd78e7fa6e41c05bd6802fa183bd9
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46180
No description provided.