Fix T46180: Theme > UV Image editor > Scope Background does not have any effect